k8s/ingress-client-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-client-srv
spec:
  ingressClassName: nginx
  rules:
    - host: ms-client.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ms-client-srv
                port:
                  number: 8000
